add tablet styling for header

--- a/src/template.html
+++ b/src/template.html
@@ -13,14 +13,19 @@
 		<div class="headerBg"></div>
 		<header>
 			<section aria-labelledby="aboutMeTitle" class="introduction">
-				<img src="<%=require('./imgs/pexels-ct-phat-19339851.jpg')%>" alt="" />
+				<div class="imgContainer">
+					<img src="<%=require('./imgs/pexels-ct-phat-19339851.jpg')%>" alt="" />
+				</div>
 				<div class="aboutMeContainer">
 					<h2 id="aboutMeTitle">About me</h2>
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, ad.
 						Vitae minus, nostrum velit sed quidem pariatur atque blanditiis molestiae
 						quisquam nobis a impedit consequatur reiciendis. Suscipit magni dolore
-						ducimus?
+						ducimus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+						ad. Vitae minus, nostrum velit sed quidem pariatur atque blanditiis
+						molestiae quisquam nobis a impedit consequatur reiciendis. Suscipit magni
+						dolore ducimus?
 					</p>
 					<div class="links">
 						<a href="https://github.com/Spaceflyy" target="_blank">
