add h1 to header / styling to it

--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,7 @@
 		<header>
 			<section aria-labelledby="aboutMeTitle" class="introduction">
 				<div class="imgContainer">
+					<h1>Connor Summers</h1>
 					<img
 						srcset="
 							<%=require('./imgs/heroImgSmall.jpg')%>  500w,
